<resources>
    <string name="app_name">GoShip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GoShip</string>
    <string name="nav_header_subtitle">goship@sjsu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="success_authentication">Login Successful</string>
    <string name="error_authentication_failed">Login Failed</string>
    <string name="register_user_fragment">Register User</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Common Strings -->
    <string name="shipping_image_description">Shipping Image</string>

    <!-- Login & Register -->
    <string name="button_login">Login</string>
    <string name="login_image_description">Login Image</string>
    <string name="radio_text_login_as_customer">Login as Customer</string>
    <string name="radio_text_login_as_vendor">Login as Vendor</string>
    <string name="radio_text_register_as_customer">Register as Customer</string>
    <string name="radio_text_register_as_vendor">Register as Vendor</string>
    <string name="button_register_here">New User Registration</string>
    <string name="text_email_hint">Email</string>
    <string name="text_password_hint">Password</string>
    <string name="text_confirm_password_hint">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="text_first_name_hint">First Name</string>
    <string name="text_last_name_hint">Last Name</string>
    <string name="text_mobile_hint">Mobile</string>
    <string name="error_failed_to_register">Registration Failed!!</string>
    <string name="success_user_register">Registration Successful</string>

    <!-- Vendor Price -->
    <string name="menu_vendor_price">Price</string>
    <string name="fragment_label_vendor_get_price">Get Shipping Price</string>
    <string name="string_source_region">Source</string>
    <string name="string_destination_region">Destination</string>
    <string name="button_vendor_get_price">Show Least Price</string>
    <string name="fragment_label_vendor_update_price">Update Shipping Price</string>
    <string name="string_least_price">Least Price</string>
    <string name="button_update_price">Update Price</string>
    <string name="warning_price_should_be_less">Price should be less than the current price</string>
    <string name="error_failed_price_update">Error in Updating Price </string>
    <string name="info_successful_price_update">Price Successfully Updated</string>

    <!-- Orders -->
    <string name="menu_order">Orders</string>
    <string name="menu_order_details">Orders Details</string>
    <string name="menu_customer_estimate">Estimate Price</string>
    <string name="fragment_customer_estimate_price">Get Estimate</string>
</resources>
