<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Network.WeatherFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/getLeastPriceConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shippingImageId"
            android:layout_width="409dp"
            android:layout_height="278dp"
            android:contentDescription="@string/shipping_image_description"
            android:src="@drawable/shipment_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sourceTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="281dp"
            android:layout_height="56dp"
            android:labelFor="@id/sourceAutoCompleteTextView"
            android:hint="@string/string_source_region"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shippingImageId"
            app:startIconDrawable="@drawable/ic_location">

            <AutoCompleteTextView
                android:id="@+id/sourceAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destinationTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="281dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:hint="@string/string_destination_region"
            android:labelFor="@id/destinationAutoCompleteTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourceTextField"
            app:startIconDrawable="@drawable/ic_location">

            <AutoCompleteTextView
                android:id="@+id/destinationAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/vendorGetPriceButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/button_vendor_get_price"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>