<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Network.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updateLeastPriceConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/shippingImageId"
            android:layout_width="409dp"
            android:layout_height="278dp"
            android:contentDescription="@string/shipping_image_description"
            android:src="@drawable/shipment_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/string_source_region"
            android:textColor="#1b5e20 "
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shippingImageId" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/string_destination_region"
            android:textColor="#1b5e20 "
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shippingImageId" />

        <Button
            android:id="@+id/minus_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="56dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@drawable/ic_remove_24px"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.goship.Button.Circle" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="69dp"
            android:gravity="center"
            android:text="Text"
            android:textColor="#1b5e20 "
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/plus_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="70dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@drawable/ic_add_24px"

            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.goship.Button.Circle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:text="@string/button_update_price"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>